<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>translation_node</name>
  <version>0.0.0</version>
  <description>Message version translation node</description>
  <maintainer email="info@px4.io">PX4</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>std_msgs</test_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>px4_msgs_old</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
