set(directories
	./roboclaw
	./device
	./px4io
	./boards/px4fmu-v2
	./boards/px4-stm32f4discovery
	./boards/px4io-v2
	./boards/px4io-v1
	./boards/px4fmu-v1
	./boards/aerocore
	./mpu6000
	./gimbal
	./camera_trigger
	./pwm_input
	./pwm_out_sim
	./pca9685
	./mkblctrl
	./sf0x
	./hott/hott_telemetry
	./hott/hott_sensors
	./hott
	./ms5611
	./led
	./irlock
	./bma180
	./l3gd20
	./blinkm
	./md25
	./lsm303d
	./pca8574
	./mb12xx
	./trone
	./airspeed
	./rgbled
	./frsky_telemetry
	./meas_airspeed
	./px4flow
	./mpu9250
	./gps
	./ets_airspeed
	./ll40ls
	./ardrone_interface
	./hmc5883
	./px4fmu
	./stm32/tone_alarm
	./stm32/adc
	./stm32
	./oreoled
	./batt_smbus
	)

foreach(directory ${directories})
	add_subdirectory(${directory} EXCLUDE_FROM_ALL)
endforeach()
